# dvc-study

./: .gitignore  README.md  dvc.yaml  models.dvc  pyproject.toml  training.py
custom_dir/: metrics.json
custom_dir/plots/metrics/: l2.tsv
