[tool.poetry]
name = "dvc-study"
version = "0.1.0"
description = ""
authors = ["rtrench <raphaeltrench@gmail.com>"]
readme = "README.md"
packages = [{include = "dvc_study"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
