[tool.poetry]
name = "dvc-study"
version = "0.1.0"
description = ""
authors = ["rtrench <raphaeltrench@gmail.com>"]
readme = "README.md"
packages = [{include = "dvc_study"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dvc = "^3.27.0"
dvclive = "^3.0.1"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
